# ped-calc

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  Trunk.toml  build.sh  index.html  vercel.json
src/: app.rs  main.rs
src/components/: dose_result.rs  drug_info_panel.rs  drug_selector.rs  history_panel.rs  mod.rs  patient_form.rs  warning_banner.rs
src/components/common/: input_field.rs  mod.rs  select_field.rs  tooltip.rs
src/components/layout/: footer.rs  navbar.rs
src/data/: drugs.rs  interactions.rs  mod.rs
src/logic/: adjuster.rs  calculator.rs  formatter.rs  mod.rs  validator.rs
src/pages/: about.rs  calculator.rs  drug_reference.rs  mod.rs
src/state/: app_state.rs
src/types/: calculation.rs  drug.rs  mod.rs  patient.rs
