[package]
name = "pedcalc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pedcalc"
path = "src/main.rs"

[dependencies]
# Leptos framework (CSR mode — ไม่มี SSR)
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = "0.7"
leptos_router = "0.7"

# WASM
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Document",
    "Navigator",
    "Clipboard",
    "console",
    "HtmlInputElement",
    "HtmlSelectElement",
    "SubmitEvent",
    "KeyboardEvent",
    "Event",
    "EventTarget",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Decimal arithmetic (สำคัญ: ห้ามใช้ f64 สำหรับ clinical calculations)
rust_decimal = { version = "1", features = ["serde", "serde-float"] }
rust_decimal_macros = "1"

# UUID สำหรับ history entries
uuid = { version = "1", features = ["v4", "js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimizations for production WASM bundle
opt-level = "z"      # optimize for size
lto = true
codegen-units = 1
panic = "abort"      # ลด bundle size

[profile.dev]
# Faster compile สำหรับ development
opt-level = 0
debug = true
